GNOME Bugzilla – Bug 672498
Accessible for rename text entry doesn't report selected text correctly
Last modified: 2012-09-05 16:48:43 UTC
The on-screen keyboard Onboard can be configured to unhide for editable text entries. However unhiding doesn't happen for the text entry that appears when renaming a file in nautilus. The AtspiAccessible associated with this widget apparently isn't marked editable, i.e. accessible.state_set doesn't contain ATSPI_STATE_EDITABLE. It would be great if this could be corrected. Other osks may be affected too. This is the original bug report for Onboard: https://bugs.launchpad.net/onboard/+bug/936310
*** Bug 674956 has been marked as a duplicate of this bug. ***
This problem affecting Orca users too. If a visual impaired user try moving the rename edit field with arrow keys, Orca doesn't possible spokening the user the actual character. If an user typed a new folder or file name in the edit box, and use backspace key to delete a character, Orca doesn't possible spokening the user the deleted character. Braille output not showing too the typed characters, so a braille user doesn't possible verify he's write right folder or file name with want renaming the actual folder or file. Possible fixing this issue in Nautilus 3.4.2 or 3.4.3? Attila
Unfortunately I have got a bad news: This bug only not affecting rename operation, create new folder or create new document dialog producing similar result, now I looked this. Have chance fix this bug with Nautilus 3.4.3 to result visual impaired users and Onboard users using accessible way this often used functions? Attila
I now pushed a fix for this bug to git master; Orca will speak about the contents of the entries. I believe there might be some bugs in the way we report the entry contents though, so I will keep this open for now.
Cosimo, how can I possible trying and using this fix under Nautilus 3.4.2? If I download Nautilus source from git, switch gnome-3-4 branch, only need applying following commit patch? http://git.gnome.org/browse/nautilus/patch/?id=ccdd920501fb9c5f70437990d3d3017954fe2e1c Attila
Attila, you would also need the commit previous to that: http://git.gnome.org/browse/nautilus/commit/?id=a9777929c4dd1a6975afd38c9e708ebc14cd7b02
I tryed this patch, but unfortunately I not see any change. If I press F2 key a folder or file, Orca only spokening me y an empty edit field, and my braille display the line is entire blank. I doed anything wrong the compilation? Possible yes. After I switch the gnome-3-4 branch and applied the patch I doed ./configure --prefix=/usr, make and make install commands. Of course I restarted my system when I tested the change. I using now Ubuntu 12.04, Orca 3.4.2, and gtk3 3.4.2-0ubuntu0.2 component versions. If you tell me what doing I wrong or what other commits need to I succesfuly test this change under GNOME 3.4, I welcome testing the fix. I tryed making a local patched package my Ubuntu 12.04 system from Nautilus source package, but the experienced results is equals my system. Have chance to land the final fix under Nautilus 3.4.3? Attila
I now cherry-picked the relevant fixes to the gnome-3-4 branch. I am not sure how to fix the incorrect selected text; I tried to play with the code for a couple of hours but didn't really get anywhere - changing the bug summary to reflect this.
Hopefuly only my system producing following error during compilation: root@hammera-Satellite-L300:/usr/src/nautilus/nautilus# make >/dev/NULL nautilus-icon-canvas-item.c:2754:1: error: no previous prototype for 'nautilus_icon_canvas_item_accessible_get_type' [-Werror=missing-prototypes] cc1: all warnings being treated as errors make[3]: *** [nautilus-icon-canvas-item.lo] Error 1 make[2]: *** [all] Error 2 make[1]: *** [all-recursive] Error 1 make: *** [all] Error 2 Attila
Those are just harmless warnings, you could get rid of those by compiling without -Werror, or using "make CFLAGS+=-w". In any case, I fixed those warnings in master and gnome-3-4 now.
Cosimo, thank you the fix, now the installation works for me right. I tested rename, folder and document creation related tasks in recompiled Nautilus 3.4.2. My results: 1. Rename operation works correct, Orca spokening right the selected folder of file name. Orca where am I command works right, if I deleted a character, Orca right spokening the deleted character. Only my desktop the "Hálózati Kiszolgálók" icon name I hear the first word, not entire text, but Orca where am I operation spokened entire result. 2. Create new document operation works correct, the presenting entry field I right see the hungarian "Névtelen dokumentum" document name. Very interesting, this file name Orca only spokened me the "névtelen" part. Orca where am I command works right, I hear entire "Névtelen dokumentum" text. If I deleted a character, Orca right spokening the deleted character. 3. Create new folder operation works right, I hear right the selected text. This situation in entry field Orca right spokening "névtelen mappa" hungarian text. Attila
Cosimo, when will be releasing Nautilus 3.4.3 maintenance release? I need known will be have Nautilus 3.4.3 maintenance release or not before I opening a downstream report for Ubuntu 12.04 to apply the proper gnome-3-4 branch committed patches with related this bug. Attila
Sounds to me, from comment 11, that this is fixed.
*** Bug 681644 has been marked as a duplicate of this bug. ***